--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body  align="center">
 		<div style="margin-top:10px;height:66px;padding-top:33px"><font color="orange" size="6" >旸旸的小壶</font></div>
-		<div style="border: 8px solid #000;background-color:red;margin-top:20px"><img src="xiaohu.png" ></div>
+		<div style="border: 6px solid;background-color:pink;margin-top:20px"><img src="xiaohu.png" ></div>
 		
 	
 	</body>
