--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 
     <title>lixiaoyang</title>
 
-    <style type="text/css" media="screen">
-      body{margin:0px;}
+    <style type="text/css" media="screen" >
+      body{margin:0px; background-color: rgb(252, 252, 236);}
 
 
     #top{
       width:100%;
-      height:78px;
-      background-color:#f4e6eb;
-      padding-left:0px;
+      background-color: rgb(250, 220, 228);
+	  height:7em;
     }
-    #p1{font-family:AKANGEL;font-size:60px; padding-left:60px;padding-top:0px;width:0px;height:0px;}
+	
+	
+    #p1{font-size:70px; width:940px;padding: 15px 120px ; font-weight:bold;letter-spacing: 10px;     font-family:  serif;  }
     #heart1{
 position: absolute;
 top: 35px;
@@ -26,7 +27,7 @@ right: 60%;
 position: absolute;
 content: "";
 left: 21px;
-top: 0px;
+top: 25px;
 width: 21px;
 height:34px;
 background: black;
@@ -67,7 +68,7 @@ right: 50%;
 position: absolute;
 content: "";
 left: 13px;
-top: 0px;
+top: 10px;
 width: 14px;
 height:23px;
 background: black;
@@ -113,7 +114,7 @@ right: 55%;
 position: absolute;
 content: "";
 left: 17px;
-top: 0px;
+top: 10px;
 width: 17px;
 height:28px;
 background: black;
@@ -143,8 +144,25 @@ transform: rotate(45deg);
 -o-transform-origin: 100% 100%;
 transform-origin :100% 100%;
 }
+#line{
+	background-color: rgb(230, 204, 204);
+	width: 100%;
+	height: 5px;
+	margin-top: 10px;
+}
+#bg{
+	width:100%;
+	margin-top: -25px;
+	height: 600px;
+}
 
-
+a{color:gray;
+text-decoration: none;
+position: absolute;
+top:425px;
+margin-left:88px;
+font-size:25px;
+}
 
 
 
@@ -159,7 +177,13 @@ transform-origin :100% 100%;
       <div id="heart1" ></div>
 	  <div id="heart2"></div>
 	  <div id="heart3"></div>
-    </div>
-	
+   </div>
+   <div id="line"></div>
+   <div>
+   <img id="bg" src="bg.png"></img>
+   <a href="http://www.renren.com" >个人简介</a>
+</div>
+   
+  
   </body>
 </html>
