--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
       width:100%;
       background-color: rgb(250, 220, 228);
 	  height:7em;
+	 
     }
 	
 	
-    #p1{font-size:70px; width:940px;padding: 15px 120px ; font-weight:bold;letter-spacing: 10px;     font-family:  serif;  }
+    #p1{font-size:70px; width:940px;padding: 15px 120px ; font-weight:bold;letter-spacing: 10px;     font-family:  serif;   margin-top: 0px;}
     #heart1{
 position: absolute;
 top: 35px;
