--- a/index.html
+++ b/index.html
@@ -1,190 +1,41 @@
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
-    <title>lixiaoyang</title>
-
-    <style type="text/css" media="screen" >
-      body{margin:0px; background-color: rgb(252, 252, 236);}
-
-
-    #top{
-      width:100%;
-      background-color: rgb(250, 220, 228);
-	  height:7em;
-	 
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+  <style type="text/css">
+    body{
+      margin: 0;
     }
-	
-	
-    #p1{font-size:70px; width:940px;padding: 15px 120px ; font-weight:bold;letter-spacing: 10px;     font-family:  serif;   margin-top: 0px;}
-    #heart1{
-position: absolute;
-top: 35px;
-right: 60%;
-
-}
-#heart1:before,
-#heart1:after {
-position: absolute;
-content: "";
-left: 21px;
-top: 25px;
-width: 21px;
-height:34px;
-background: black;
--moz-border-radius: 50px 50px 0 0;
-border-radius: 74px 74px 0 0;
--webkit-transform: rotate(-65deg);
--moz-transform: rotate(-45deg);
--ms-transform: rotate(-45deg);
--o-transform: rotate(-45deg);
-transform: rotate(-45deg);
--webkit-transform-origin: 0 100%;
--moz-transform-origin: 0 100%;
--ms-transform-origin: 0 100%;
--o-transform-origin: 0 100%;
-transform-origin: 0 100%;
-}
-#heart1:before{
-left:0px;
--webkit-transform: rotate(25deg);
--moz-transform: rotate(45deg);
--ms-transform: rotate(45deg);
--o-transform: rotate(45deg);
-transform: rotate(45deg);
--webkit-transform-origin: 100% 100%;
--moz-transform-origin: 100% 100%;
--ms-transform-origin: 100% 100%;
--o-transform-origin: 100% 100%;
-transform-origin :100% 100%;
-}
-
-    #heart2{
-position: absolute;
-top: 55px;
-right: 50%;
-}
-#heart2:before,
-#heart2:after {
-position: absolute;
-content: "";
-left: 13px;
-top: 10px;
-width: 14px;
-height:23px;
-background: black;
--moz-border-radius: 50px 50px 0 0;
-border-radius: 50px 50px 0 0;
--webkit-transform: rotate(-25deg);
--moz-transform: rotate(-45deg);
--ms-transform: rotate(-45deg);
--o-transform: rotate(-45deg);
-transform: rotate(-45deg);
--webkit-transform-origin: 0 100%;
--moz-transform-origin: 0 100%;
--ms-transform-origin: 0 100%;
--o-transform-origin: 0 100%;
-transform-origin: 0 100%;
-}
-#heart2:before{
-left:0px;
--webkit-transform: rotate(65deg);
--moz-transform: rotate(45deg);
--ms-transform: rotate(45deg);
--o-transform: rotate(45deg);
-transform: rotate(45deg);
--webkit-transform-origin: 100% 100%;
--moz-transform-origin: 100% 100%;
--ms-transform-origin: 100% 100%;
--o-transform-origin: 100% 100%;
-transform-origin :100% 100%;
-}
-
-
-
-
-
-    #heart3{
-position: absolute;
-top: 45px;
-right: 55%;
-
-}
-#heart3:before,
-#heart3:after {
-position: absolute;
-content: "";
-left: 17px;
-top: 10px;
-width: 17px;
-height:28px;
-background: black;
--moz-border-radius: 50px 50px 0 0;
-border-radius: 133px 112px 0 0;
--webkit-transform: rotate(-33deg);
--moz-transform: rotate(-45deg);
--ms-transform: rotate(-45deg);
--o-transform: rotate(-45deg);
-transform: rotate(-45deg);
--webkit-transform-origin: 0 100%;
--moz-transform-origin: 0 100%;
--ms-transform-origin: 0 100%;
--o-transform-origin: 0 100%;
-transform-origin: 0 100%;
-}
-#heart3:before{
-left:0px;
--webkit-transform: rotate(57deg);
--moz-transform: rotate(45deg);
--ms-transform: rotate(45deg);
--o-transform: rotate(45deg);
-transform: rotate(45deg);
--webkit-transform-origin: 100% 100%;
--moz-transform-origin: 100% 100%;
--ms-transform-origin: 100% 100%;
--o-transform-origin: 100% 100%;
-transform-origin :100% 100%;
-}
-#line{
-	background-color: rgb(230, 204, 204);
-	width: 100%;
-	height: 5px;
-	margin-top: 10px;
-}
-#bg{
-	width:100%;
-	margin-top: -25px;
-	height: 600px;
-}
-
-a{color:gray;
-text-decoration: none;
-position: absolute;
-top:425px;
-margin-left:88px;
-font-size:25px;
-}
-
-
-
-
-
-      </style>
-
-  </head>
-  <body>
-    <div id="top">
-      <p id="p1">Walee</p>
-      <div id="heart1" ></div>
-	  <div id="heart2"></div>
-	  <div id="heart3"></div>
-   </div>
-   <div id="line"></div>
-   <div>
-   <img id="bg" src="bg.png"></img>
-   <a href="http://www.renren.com" >个人简介</a>
-</div>
-   
-  
-  </body>
+    .jianli{
+      width: 980px;
+      margin: 0 auto;
+    }
+    .footer{
+      height:200px;
+      width:980px;
+      margin: 0 auto;
+      text-align:center;
+      line-height:150px;
+    }
+    a{
+      text-decoration:none;
+      color:pink;
+      margin:20px;
+    }
+    a:active{
+      color:red;
+    }
+  </style>
+</head>
+<body>
+  <div class="jianli">
+    <img src="jianli.jpg" alt="" />
+  </div>
+  <div class="footer">
+    <a href="mailto:lixiaoyang1026@gmail.com">联系我</a>
+    <a href="https://play.google.com/store/apps/details?id=com.openxid.gospel">gospel googel play</a>
+    <a href="http://xianggou.cuti4.com/">享购</a>
+    <a href="http://cuti4.com/">Cuti4<a>
+</body>
 </html>
